# overture-nlp

./: .gitignore  compose.yml  download-model.sh  example-llama-server-docker.sh  example-llama-server.sh  example-nlp-run.sh  example.env  nlp.py  pyproject.toml  results.md  vandalism-sample.csv
samples/language-validation/: en.csv
samples/vandalism/: vandalism-2k.csv  vandalism-full-context-small.csv  vandalism-no-context-small.csv  vandalism-no-context.csv  vandalism_full_context.csv
