[project]
name = "overture-nlp"
version = "0.1.0"
description = ""
authors = [
    {name = "Brad Richardson",email = "bradrichardson@meta.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"

[project.optional-dependencies]
llama-cpp = [
    "huggingface-hub (>=0.28.1)",
    "llama-cpp-python (>=0.3.7)",
]
llama-cpp-server = [
    "openai (>=1.63.0,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
